@@ -1,4 +1,5 @@
 8 Jun 2018
+fix: flush cache when driver is 'file'
 fix: adding/removing user class not updating class colors
 fix: ambiguous 'status' view_forum.php
 add: missing sqlerr in many queries
